src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>BigMachines__Origin_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This line item was created on the opportunity when the &quot;Origin Quote&quot; was set to Primary.  If the &quot;Origin Quote&quot; becomes a secondary quote, this line item will be removed from the opportunity.</description>
        <label>Origin Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Synchronization_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Synchronization Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>